Fixed ul with display:none so that it is not clickable and does not show pointer events when collapsed

--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,23 @@ body {
 .menu {
     background-color: transparent;
     z-index: 1;
+    height: 0;
     /* display: block;
     position: relative; */
+}
+
+.menu.hidden ul {
+    /* testing styles - list item #2 */
+    /* https://blog.hubspot.com/website/drop-down-animation */
+    display: none;
+    height: 0;
+    left: 0;
+    opacity: 0;
+    /* position: absolute; */
+    transition: all 1s ease;
+    transform: translateY(0);
+    top: 35px;
+    width: 100%;
 }
 
 .menu ul {
@@ -113,18 +128,7 @@ body {
     height: 260px;
 }
 
-.menu.hidden ul {
-    /* testing styles - list item #2 */
-    /* https://blog.hubspot.com/website/drop-down-animation */
-    height: 0;
-    left: 0;
-    opacity: 0;
-    /* position: absolute; */
-    transition: all 1s ease;
-    transform: translateY(0);
-    top: 35px;
-    width: 100%;
-}
+
 
 .menu li {
     /* margin: 10px 0px; */
